--- a/style.css
+++ b/style.css
@@ -1,180 +1,40 @@
-/* Basic Reset */
+/* Reset */
 html {
   box-sizing: border-box;
-  color:rgb(80, 80, 80);
-  font-family: 'Nunito', sans-serif;
-  font-size: 100%;
 }
 
-*, 
-*:after, 
-*:before {
+*, *:before, *:after {
   box-sizing: inherit;
 }
+/* Palette */
+/* #color-palette {
+  width: fit-content;
+} */
 
-body {
-  background-color: rgb(248, 246, 247);
-  margin: 0;
-  padding: 0;
-}
-
-h1, 
-h2, 
-h3 {
-  font-weight: 700;
-  line-height: 1.1;
-  margin-bottom: 10px;
-  margin-top: 0;
-}
-
-h1 {
-  font-weight: 900;
-  font-size: 50px;
-}
-
-p {
-  margin-bottom: 10px;
-  margin-top: 0;
-}
-
-ul, 
-ol {
-  list-style: none;
-  margin: 0;
-  padding-left: 0;
-}
-
-/* Header */
-header {
-  padding: 60px 0 40px;
-  text-align: center;
-}
-
-/* Color Palette */
 .color {
-  border: #000000 solid 1px;
-  height: 45px;
-  width: 45px;
-  float: left;
-  margin-right: 40px;
-  border-radius: 5px;
-}
-
-.color:nth-child(4) {
-  margin-right: 0;
-}
-section:nth-child(1) {
-  margin-bottom: 20px;
-}
-
-/* Pixel Board */
-section:nth-child(2) {
-  margin-bottom: 300px;
-}
-#pixel-board {
-  min-height: 10px;
-  min-width: 10px;
-}
-
-
-
-.pixel {
   border: 1px solid black;
   float: left;
   height: 40px;
   width: 40px;
 }
 
-/* Footer */
-footer {
-  background-color: #c5dcd2;
-  border-top: 1px solid #eff5f2;
-  padding: 40px;
-  width: 100%;
+/* Board */
+#pixel-board {
+  min-width: 200px;
 }
 
-input {
-  border: none;
-  border-radius: 5px;
-  display: block;
+.pixel {
+  background-color: white;
+  border: 1px solid black;
   float: left;
   height: 40px;
-  margin-right: 20px;
-  padding-left: 15px;
-  width: 190px;
-  outline: none;
+  width: 40px;
 }
-
-input:focus {
-  box-shadow: white 0 0 10px;
-}
-.btn-criar {
-  background-color: #40916e;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  display: block;
-  height: 40px;
-  width: 95px;  
-}
-
-.btn-criar:hover {
-  box-shadow: white 0 0 10px;
-}
-
-.btn-criar:active,
-.btn-reset:active {
-  transform: scale(95%);
-}
-
-.btn-reset {
-  background-color: #E9dfc6;
-  border: none;
-  border-radius: 5px;
-  color: #7c6c79;
-  display: block;
-  margin-top: 20px;
-  padding: 9px 125px;
-}
-
-.btn-reset:hover {
-  background-color:#7c6c79;
-  color: #c9afc4;
-}
-
-/* Wrappers */
-.wrapper {
-  width: 900px;
-}
-/* Utilidades */
+/* Utilities */
 .clearfix {
   clear: both;
 }
 
-.center {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.fixed {
-  position: fixed;
-}
-
-.bottom {
-  bottom: 0;
-}
-
 .fit-content {
   width: fit-content;
-}
-
-.font-big {
-  font-size: 18px;
-}
-
-.padded {
-  padding: 50px;
-  border-radius: 10px;
-  box-shadow: #ececec 0 5px 20px;
-  margin-top: 50px;
 }
