--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+
+body {
+  font-family: 'Nunito', sans-serif;
+}
 /* Palette */
 /* #color-palette {
   width: fit-content;
@@ -14,8 +18,8 @@ html {
 .color {
   border: 1px solid black;
   float: left;
-  height: 40px;
-  width: 40px;
+  height: 45px;
+  width: 45px;
 }
 
 /* Board */
